[gd_scene format=3 uid="uid://drm6intd2vqg8"]

[ext_resource type="Script" path="res://src/client/arena/battle_interface/kill_feed_item.gd" id="1_d4m8l"]

[node name="KillFeedItem" type="HBoxContainer"]
layout_mode = 2
mouse_filter = 2
alignment = 2
script = ExtResource("1_d4m8l")

[node name="KillerLabel" type="Label" parent="." unique_id=1265081475]
unique_name_in_owner = true
layout_mode = 2
mouse_filter = 2
text = "KILLER"
horizontal_alignment = 2

[node name="ShellLabel" type="Label" parent="." unique_id=876929292]
unique_name_in_owner = true
layout_mode = 2
mouse_filter = 2
text = "SHELL"
horizontal_alignment = 2

[node name="VictimLabel" type="Label" parent="." unique_id=862299730]
unique_name_in_owner = true
layout_mode = 2
mouse_filter = 2
text = "VICTIM"
horizontal_alignment = 2

[node name="ExpireTimer" type="Timer" parent="." unique_id=1300131772]
unique_name_in_owner = true
wait_time = 5.0
one_shot = true
